@@ -1,47 +1,0 @@
-.\" This -*- nroff -*- source file is part of foomatic.
-.\"
-.TH FOOMATIC-PPDLOAD 8 "2001-05-07" "Foomatic Project"
-.SH NAME
-foomatic-ppdload \- <put a short description here>
-.SH SYNOPSIS
-.B foomatic-ppdload \-h
-
-.B foomatic-ppdload
-\fIfilename.ppd printer-id\fR
-
-.B foomatic-ppdload \-R
-\fIprinter-id\fR
-
-.SH DESCRIPTION
-.B foomatic-ppdload
-takes a ppd filename and a printer ID as arguments.  It
-parses a PPD file and writes option data into the foomatic database
-for use with the foomatic "ppd" driver and that printer.
-
-With the \fB-R\fR option you can remove a printer from the "ppd"
-driver, and with \fB-h\fR a short help text is shown.
-
-Right now, it will handle Boolean and PickOne options that go in the
-Prolog, DocumentSetup, or PageSetup spots.  Also, PPD interoption
-constraints (not to be confused with foomatic option to printer and
-driver mapping constraints) are not supported by foomatic.  And of
-course, the interesting color and font information from the PPD has
-no place in the current foomatic schema.  All this will change over
-time.
-
-
-.\".SH SEE ALSO
-.\".IR foomatic-XXX (1),
-
-.SH EXIT STATUS
-.B foomatic-ppdload
-returns ...
-
-.SH AUTHOR
-Manfred Wassmann <\fImanolo@NCC-1701.B.Shuttle.de\fR> for the foomatic
-project using output from the associated binary.
-
-.SH BUGS
-There are several limitations, but it's an interesting experiment.
-
-Please send bug reports to foomatic-devel@linuxprinting.org.
